# potion

./: .gitignore  README.md  api.py  image_testing.ipynb  main.py  mypy.ini  ncsgpt_potion.py  potion.py  pyproject.toml  slide_creation.ipynb  test_creating_ncs.py  testing.ipynb
llms/: openai.py  ppt_prompt.py
scripts/: dissect_ppt.py  start.sh
templates/: nila_ppt_template.pptx
tools/: formatter.py  replicate.py  validator.py
