[tool.poetry]
name = "potion"
version = "0.1.0"
description = "PowerPoint Generation X"
authors = ["Reagan <rrr.chanhiulok@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.44.1"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
fastapi = "^0.114.0"
python-multipart = "^0.0.9"
python-pptx = "^1.0.2"
pathvalidate = "^3.2.1"
replicate = "^0.34.2"
pydantic = "^2.9.2"
markdown2 = "^2.5.1"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
ruff = "^0.6.4"
mypy = "^1.11.2"
types-beautifulsoup4 = "^4.12.0.20240907"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
